[package]
name = "vrf-tests"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-engine-test-support = { version = "5.0.0", features = ["test-support"] }
casper-execution-engine = { version = "5.0.0" }
once_cell = "1.8.0"
serde = { version = "1", features = ["derive", "alloc"], default-features = false }
casper_types_derive = "0.1.0"
rand = "0.7.0"
hex = { version = "0.4.3", default-features = false }
common = { path = "../common" }
test-env = { path = "../../test-env/test-env" }
casper-types = "3.0.0"

[lib]
name = "tests"
bench = false
doctest = false
